feat: Readily Release Releases (#189)
* Test Lerna version options

* update lerna

* Update Prettier ignore

* Fix log for 1.7.1

* Restore formatting

* Auto pre-release.

* Yes, of course.

* Fix env path

* Don't rely on shebang

* Release after tests.

* Only master

* Do a real publish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,10 +134,24 @@ jobs:
           paths:
             - dist
 
+  release:
+    <<: *container_config
+    steps:
+      - *restore_repo
+      - *sum_lockfiles
+      - *restore_npm_cache
+      - *npm_install
+      - run:
+          name: Authenticate with npm
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/atlantis/.npmrc
+      - run:
+          name: Publishing
+          command: npm run ci:release
+
 workflows:
   version: 2
 
-  docs:
+  atlantis:
     jobs:
       - checkout_code
       - install_dependencies:
@@ -155,3 +169,12 @@ workflows:
       - build_docs:
           requires:
             - install_dependencies
+      - release:
+          filters:
+            branches:
+              only: "master"
+          requires:
+            - lint_javascript
+            - lint_css
+            - test
+            - build_docs
