--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,12 @@
       "allowBranch": ["master"]
     },
     "publish": {
-      "ignoreChanges": ["package-lock.json", "**/package-lock.json"]
+      "ignoreChanges": [
+        "lerna.json",
+        "package.json",
+        "package-lock.json",
+        "CHANGELOG.md"
+      ]
     }
   }
 }
