fix: Skip CI on Publish Commits

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
   "command": {
     "version": {
       "conventionalCommits": true,
+      "message": "chore(release): Publish\n[ci skip]",
       "allowBranch": ["master"]
     },
     "publish": {
