--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   "command": {
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): Publish\n[ci skip]",
+      "message": "chore(release): Publish",
       "allowBranch": ["master"]
     },
     "publish": {
