--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "generate": "plop -- --path='./'",
     "build": "docz build",
     "clean": "rm -rf .docz",
+    "lerna:bootstrap": "lerna bootstrap",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:css": "stylelint 'packages/**/*.css' --allow-empty-input",
     "lint:markdown": "prettier --check '**/*.md'",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
-    "install": "lerna bootstrap",
+    "install": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes"
@@ -40,14 +41,15 @@
     "@jobber/eslint-config": "file:packages/eslint-config",
     "@jobber/generators": "file:packages/generators",
     "@jobber/stylelint-config": "file:packages/stylelint-config",
+    "@reach/router": "^1.3.3",
     "@testing-library/react": "^9.3.0",
     "@testing-library/user-event": "^4.2.4",
     "@types/jest": "^24.0.14",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.4.2",
     "docz": "^2.2.0",
-    "docz-theme-default": "^1.0.0",
+    "docz-core": "^2.2.0",
     "eslint": "^6.3.0",
     "eslint-plugin-jest": "^22.6.4",
     "glob": "^7.1.4",
@@ -63,8 +65,10 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet-async": "^1.0.4",
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
