--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@jobber/components": "file:packages/components",
     "@jobber/design": "file:packages/design",
     "@jobber/docx": "file:packages/docx",
     "@jobber/eslint-config": "file:packages/eslint-config",
@@ -72,6 +73,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
+    "theme-ui": "^0.3.1",
     "typed-css-modules-loader": "^0.0.17",
     "typescript": "^3.5.2"
   },
