--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "docz": "^2.2.0",
     "docz-core": "^2.2.0",
     "eslint": "^6.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
