Upgrade to edge docz

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "css-loader": "^3.4.2",
-    "docz": "^2.2.0",
-    "docz-core": "^2.2.0",
+    "docz": "^2.3.0-alpha.13",
+    "docz-core": "^2.3.0-alpha.12",
     "eslint": "^6.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
