--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest",
     "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
     "generate": "plop -- --path='./'",
-    "build": "docz build",
+    "build": "npm run docz:build",
+    "docz:build": "docz build",
+    "docz:serve": "docz serve",
     "clean": "rm -rf .docz",
     "lerna:bootstrap": "lerna bootstrap",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
