--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^6.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
+    "gatsby-theme-docz": "^2.2.0",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
