chore: Make our Ch-ch-ch-ch-changes more visible.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "install": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
-    "ci:release": "lerna publish --yes"
+    "ci:release": "lerna publish --yes",
+    "version": "node src/ensureChangelogHeaders.js"
   },
   "repository": {
     "type": "git",
