--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "install": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
-    "ci:release": "lerna publish --yes"
+    "ci:release": "lerna publish --yes",
+    "version": "node src/ensureChangelogHeaders.js"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "@testing-library/react": "^9.3.0",
     "@testing-library/user-event": "^4.2.4",
     "@types/jest": "^24.0.14",
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "css-loader": "^3.4.2",
@@ -65,6 +67,7 @@
     "jest-junit": "^6.4.0",
     "lerna": "^3.20.2",
     "lint-staged": "^9.4.2",
+    "lodash": "^4.17.15",
     "plop": "^2.5.3",
     "postcss": "^7.0.17",
     "postcss-loader": "^3.0.0",
