--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,12 +24,14 @@
     "@popperjs/core": "^2.0.6",
     "@std-proposal/temporal": "0.0.1",
     "@types/lodash": "^4.14.136",
+    "@types/resize-observer-browser": "^0.1.3",
     "@types/uuid": "^3.4.5",
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
     "react-markdown": "^4.1.0",
+    "resize-observer-polyfill": "^1.5.1",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
     "uuid": "^3.3.2"
