--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,10 +23,12 @@
     "@jobber/formatters": "^0.0.4",
     "@popperjs/core": "^2.0.6",
     "@std-proposal/temporal": "0.0.1",
+    "@types/color": "^3.0.1",
     "@types/lodash": "^4.14.136",
     "@types/uuid": "^3.4.5",
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
+    "color": "^3.1.2",
     "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
     "react-markdown": "^4.1.0",
