--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "@jobber/formatters": "^0.0.4",
-    "@jobber/hooks": "file:../hooks",
+    "@jobber/hooks": "^0.0.1",
     "@popperjs/core": "^2.0.6",
     "@std-proposal/temporal": "0.0.1",
     "@types/lodash": "^4.14.136",
