--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -16,7 +16,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "react": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6"
   }
 }
