--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,6 +31,7 @@
     "color": "^3.1.2",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
+    "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
