--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.4",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
