--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,6 +25,7 @@
     "@std-proposal/temporal": "0.0.1",
     "@types/color": "^3.0.1",
     "@types/lodash": "^4.14.136",
+    "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^3.4.5",
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.15",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
     "uuid": "^3.3.2"
