Add throttle to useResizeObserver and update docs

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "@jobber/formatters": "^0.0.4",
+    "@jobber/hooks": "^0.1.0",
     "@popperjs/core": "^2.0.6",
     "@std-proposal/temporal": "0.0.1",
     "@types/color": "^3.0.1",
