--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -16,7 +16,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "resize-observer-polyfill": "^1.5.1"
+    "lodash": "^4.17.15",
+    "resize-observer-polyfill": "^1.5.1",
+    "use-resize-observer": "^6.1.0"
   },
   "peerDependencies": {
     "react": "^16.8.6"
