--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -8,7 +8,7 @@
   "files": [
     "dist/*",
     "*.css",
-    "foundation.js",
+    "foundation.*",
     "icons/*"
   ],
   "scripts": {
@@ -19,7 +19,8 @@
     "build:ts": "tsc --project .",
     "build:cssTypes": "tcm src/icons",
     "build:colors": "node buildColors.js",
-    "build:foundation": "node buildFoundation.js",
+    "build:foundation": "node buildFoundation.js && npm run build:foundationTypes",
+    "build:foundationTypes": "tsc --declaration --allowJs src/foundation.js --outDir .",
     "clean": "rm -rf dist/* icons/* colors.js foundation.css tsconfig.tsbuildinfo",
     "prepare": "npm run clean; npm run build"
   },
