--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -14,13 +14,13 @@
   "scripts": {
     "build": "npm run build:css && npm run build:css:icons && npm run build:colors && npm run build:cssTypes && npm run build:rollup && npm run build:foundation",
     "build:rollup": "rollup --config",
-    "build:css": "postcss src/foundation.css --output foundation.css --use postcss-import",
+    "build:css": "postcss foundation.css --output foundation.css --use postcss-import",
     "build:css:icons": "postcss src/icons/*.css --dir icons/ --use postcss-import",
     "build:ts": "tsc --project .",
     "build:cssTypes": "tcm src/icons",
     "build:colors": "node buildColors.js",
-    "build:foundation": "node buildFoundation.js && node src/jobberStyle.js && npm run build:foundationTypes",
-    "build:foundationTypes": "tsc --declaration --allowJs src/foundation.js --outDir .",
+    "build:foundation": "node buildFoundation.js && node jobberStyle.js && npm run build:foundationTypes",
+    "build:foundationTypes": "tsc --declaration --emitDeclarationOnly --allowJs foundation.js --outDir .",
     "clean": "rm -rf dist/* icons/* colors.js foundation.css tsconfig.tsbuildinfo",
     "prepare": "npm run clean; npm run build"
   },
