--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "npm run build:css && npm run build:css:icons && npm run build:colors && npm run build:cssTypes && npm run build:foundation && npm run build:rollup",
     "build:rollup": "rollup --config",
-    "build:css": "postcss foundation.css --output foundation.css --use postcss-import",
+    "build:css": "postcss src/foundation.css --output foundation.css --use postcss-import",
     "build:css:icons": "postcss src/icons/*.css --dir icons/ --use postcss-import",
     "build:ts": "tsc --project .",
     "build:cssTypes": "tcm src/icons",
