--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,6 +7,7 @@
     "patch-eslint-plugin-resolution.js"
   ],
   "dependencies": {
+    "@rushstack/eslint-patch": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint-config-prettier": "^6.2.0",
