refactor(design): Move icons logic to @jobber/design (#256)
* move icons to jobber design

* use icons from jobber design

* update readme's

* update files for tarball payload

* update readme

* add test for getIcon

* define IconColorNames and IconSizes independent of the css file
Since we have a module declaration for all our css files on react native, we lost the types on the css files. This change helps React Native have access to the actual types

* add sourcemap config to rollup

* update jobber design readme to include icons

* export classNameMaps

* invert classNames mapping

* add height to icon sizes

* refactor get icon color

* merge master

* add generated file to prettierignore

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,6 +20,7 @@
     "dist/*"
   ],
   "dependencies": {
+    "@jobber/design": "^0.6.0",
     "@jobber/formatters": "^0.0.4",
     "@jobber/hooks": "^0.2.1",
     "@popperjs/core": "^2.0.6",
