--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobber/design",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Design foundation for the Jobber Atlantis Design System",
   "license": "MIT",
   "main": "dist/index.js",
@@ -26,12 +26,12 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "autoprefixer": "^9.5.1",
     "postcss": "^7.0.16",
     "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^8.0.10",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
-    "typescript": "^3.8.3",
     "rollup": "^1.11.3",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-multi-input": "^0.2.2",
@@ -39,7 +39,7 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.21.0",
-    "autoprefixer": "^9.5.1",
-    "typed-css-modules": "^0.3.6"
+    "typed-css-modules": "^0.3.6",
+    "typescript": "^3.8.3"
   }
 }
