--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,7 @@
     "color": "^3.1.2",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
+    "react-hook-form": "^6.3.2",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.2.0",
