--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,8 +32,10 @@
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
+    "crypto-js": "^4.0.0",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
+    "react-dropzone": "^11.0.2",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.2.0",
@@ -46,6 +48,7 @@
     "@testing-library/react": "^10.3.0",
     "@testing-library/user-event": "^12.0.2",
     "@types/classnames": "^2.2.7",
+    "@types/crypto-js": "^3.1.47",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.4",
