--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -30,6 +30,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^3.4.5",
     "@use-it/event-listener": "^0.1.3",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "crypto-js": "^4.0.0",
