--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,6 +32,7 @@
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
+    "filesize": "^6.1.0",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
     "react-image-lightbox": "^5.1.1",
