--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -30,11 +30,13 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^3.4.5",
     "@use-it/event-listener": "^0.1.3",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "filesize": "^6.1.0",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
+    "react-dropzone": "^11.0.2",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.2.0",
