--- a/package.json
+++ b/package.json
@@ -57,12 +57,9 @@
     "@types/react-dom": "^16.9.2",
     "autoprefixer": "^9.8.4",
     "css-loader": "^3.4.2",
-    "docz": "^2.3.0-alpha.13",
-    "docz-core": "^2.3.0-alpha.12",
     "eslint": "^6.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
-    "gatsby-theme-docz": "^2.3.0-alpha.13",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
@@ -85,7 +82,6 @@
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
-    "theme-ui": "^0.3.1",
     "typed-css-modules-loader": "^0.0.17",
     "typescript": "^3.8.3"
   },
@@ -102,6 +98,7 @@
     "ie >= 11"
   ],
   "dependencies": {
-    "@std-proposal/temporal": "0.0.1"
+    "@std-proposal/temporal": "0.0.1",
+    "gatsby-theme-docz": "^2.3.1"
   }
 }
