--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -13,10 +13,10 @@
     "docz": "^2.3.1",
     "gatsby-theme-docz": "^2.3.1"
   },
-  "devDependencies": {
-    "lodash": "^4.17.19"
-  },
   "dependencies": {
-    "react": "^16.13.1"
+    "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
+    "react-helmet": "^6.1.0",
+    "theme-ui": "^0.2.38"
   }
 }
