--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -14,6 +14,7 @@
     "gatsby-theme-docz": "^2.3.1"
   },
   "dependencies": {
+    "gatsby-theme-docz": "^2.3.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0",
