--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "docz": "^2.3.1",
-    "gatsby-theme-docz": "^2.3.1"
   },
   "dependencies": {
+    "docz": "^2.3.1",
     "gatsby-theme-docz": "^2.3.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.2.38"
   }
