--- a/packages/docz/package.json
+++ b/packages/docz/package.json
@@ -13,6 +13,7 @@
     "@jobber/docz-theme": "^1.0.1-pre.375",
     "docz": "^2.3.1",
     "gatsby-plugin-module-resolver": "^1.0.3",
+    "glob": "^7.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
