--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@jobber/components": "^1.40.2",
     "@jobber/design": "^0.8.0",
     "docz": "^2.3.1",
+    "gatsby-plugin-compile-es6-packages": "^2.1.0",
     "gatsby-theme-docz": "^2.3.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
