add basic writing of component index

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,6 +11,7 @@
     "convertIcoMoon": "scripts/convertIcoMoon.ts",
     "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
     "prepublishOnly": "ts-node --project ../../tsconfig.bin.json scripts/entryPoints.ts",
+    "yabba": "ts-node --project ../../tsconfig.bin.json scripts/writeComponentIndex.ts",
     "prepare": "npm run clean; npm run build",
     "postpublish": "ts-node --project ../../tsconfig.bin.json scripts/entryPoints.ts clean"
   },
