--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.15",
     "react-dropzone": "^11.0.2",
+    "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.2.0",
