--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -14,6 +14,7 @@
     "@jobber/components": "^1.40.2",
     "@jobber/design": "^0.8.0",
     "docz": "^2.3.1",
+    "gatsby": "^2.24.63",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-theme-docz": "^2.3.1",
@@ -22,5 +23,6 @@
     "react": "^16.13.1",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.2.38"
-  }
+  },
+  "devDependencies": {}
 }
