--- a/packages/docz-theme/package.json
+++ b/packages/docz-theme/package.json
@@ -16,6 +16,7 @@
     "docz": "^2.3.1",
     "gatsby": "^2.24.63",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-theme-docz": "^2.3.1",
     "lodash": "^4.17.20",
