--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -13,6 +13,7 @@
     "dist/*"
   ],
   "devDependencies": {
+    "@testing-library/react": "^11.1.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
