--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 references:
   container_config: &container_config
     docker:
-      - image: circleci/node
+      - image: circleci/node:10
     working_directory: ~/atlantis
 
   restore_repo: &restore_repo
@@ -31,9 +31,8 @@ references:
         - npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
         - npm-cache-v1
 
+  
   npm_install: &npm_install
-    pre:
-      npm install -g npm@6.x.x
     run:
       name: Install Dependencies
       command: npm ci
