--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 references:
   container_config: &container_config
     docker:
-      - image: circleci/node
+      - image: circleci/node:10
     working_directory: ~/atlantis
 
   restore_repo: &restore_repo
