--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -13,11 +13,14 @@
     "dist/*"
   ],
   "devDependencies": {
+    "@testing-library/react": "^10.2.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@use-it/event-listener": "^0.1.6",
     "lodash": "^4.17.15",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-xor": "^1.0.8",
     "use-resize-observer": "^6.1.0"
   },
   "peerDependencies": {
