--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^17.0.1",
+    "theme-ui": "^0.3.5"
+  }
 }
