resets the theme

--- a/package.json
+++ b/package.json
@@ -57,12 +57,11 @@
     "@types/react-dom": "^16.9.2",
     "autoprefixer": "^9.8.4",
     "css-loader": "^3.4.2",
-    "docz": "^2.3.0-alpha.13",
-    "docz-core": "^2.3.0-alpha.12",
+    "docz": "^2.3.1",
     "eslint": "^6.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
-    "gatsby-theme-docz": "^2.3.0-alpha.13",
+    "gatsby-theme-docz": "^2.3.1",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
