--- a/package.json
+++ b/package.json
@@ -36,57 +36,57 @@
   },
   "homepage": "https://github.com/GetJobber/atlantis#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@jobber/components": "file:packages/components",
     "@jobber/design": "file:packages/design",
     "@jobber/docx": "file:packages/docx",
     "@jobber/eslint-config": "file:packages/eslint-config",
     "@jobber/generators": "file:packages/generators",
     "@jobber/stylelint-config": "file:packages/stylelint-config",
-    "@reach/router": "^1.3.3",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^12.0.2",
-    "@types/jest": "^26.0.0",
-    "@types/lodash": "^4.14.149",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "autoprefixer": "^9.8.4",
-    "css-loader": "^3.4.2",
-    "docz": "^2.3.0-alpha.13",
-    "docz-core": "^2.3.0-alpha.12",
-    "eslint": "^6.3.0",
+    "@reach/router": "^1.3.4",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.167",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "autoprefixer": "^9.8.6",
+    "css-loader": "^3.6.0",
+    "docz": "^2.3.1",
+    "docz-core": "^2.3.0",
+    "eslint": "^6.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-jest": "^22.6.4",
-    "gatsby-theme-docz": "^2.3.0-alpha.13",
-    "glob": "^7.1.4",
+    "eslint-plugin-jest": "^22.21.0",
+    "gatsby-theme-docz": "^2.3.1",
+    "glob": "^7.1.6",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
     "jest-junit": "^6.4.0",
-    "lerna": "^3.20.2",
-    "lint-staged": "^9.4.2",
-    "lodash": "^4.17.15",
-    "plop": "^2.5.3",
-    "postcss": "^7.0.17",
+    "lerna": "^3.22.1",
+    "lint-staged": "^9.5.0",
+    "lodash": "^4.17.20",
+    "plop": "^2.7.4",
+    "postcss": "^7.0.35",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet-async": "^1.0.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet-async": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
-    "stylelint-junit-formatter": "^0.2.1",
-    "theme-ui": "^0.3.1",
+    "stylelint-junit-formatter": "^0.2.2",
+    "theme-ui": "^0.3.5",
     "typed-css-modules-loader": "^0.0.17",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
