--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {},
   "peerDependencies": {
     "docz": "^2.3.1",
+    "gatsby-theme-docz": "*",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "theme-ui": "0.3.5"
