--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -22,6 +22,8 @@
     "gatsby-theme-docz": "*",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "theme-ui": "0.3.5"
+    "theme-ui": "0.3.5",
+    "react-live": "*",
+    "re-resizable": "*"
   }
 }
