add jobber alias to build

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "jest",
     "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
     "generate": "plop -- --path='./packages/components/src/'",
-    "build": "npm run docz:build",
-    "docz:build": "docz build",
+    "build": "JOBBER_ALIAS=true docz build",
     "docz:serve": "docz serve",
     "clean": "rm -rf .docz",
     "lerna:bootstrap": "lerna bootstrap",
