--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "scripts": {
     "prestart": "cd packages/components && npm run build:cssTypes",
-    "start": "docz dev",
-    "start:withPrivateComponents": "PRIVATE_COMPONENTS=visible docz dev",
+    "start": "JOBBER_ALIAS=true docz dev",
+    "start:withPrivateComponents": "JOBBER_ALIAS=true PRIVATE_COMPONENTS=visible docz dev",
     "test": "jest",
     "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
     "generate": "plop -- --path='./packages/components/src/'",
     "build": "JOBBER_ALIAS=true docz build",
-    "docz:serve": "docz serve",
+    "serve": "docz serve",
     "clean": "rm -rf .docz",
     "lerna:bootstrap": "lerna bootstrap",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
