--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "prestart": "cd packages/components && npm run build:cssTypes",
-    "start": "JOBBER_ALIAS=true docz dev",
-    "start:withPrivateComponents": "JOBBER_ALIAS=true PRIVATE_COMPONENTS=visible docz dev",
+    "start": "USE_ATLANTIS_ALIASES=true docz dev",
+    "start:withPrivateComponents": "USE_ATLANTIS_ALIASES=true PRIVATE_COMPONENTS=visible docz dev",
     "test": "jest",
     "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
     "generate": "plop -- --path='./packages/components/src/'",
-    "build": "JOBBER_ALIAS=true docz build",
+    "build": "USE_ATLANTIS_ALIASES=true docz build",
     "serve": "docz serve",
     "clean": "rm -rf .docz",
     "lerna:bootstrap": "lerna bootstrap",
