--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -18,11 +18,11 @@
   },
   "devDependencies": {},
   "peerDependencies": {
-    "docz": "^2.3.1",
+    "docz": "*",
     "gatsby-theme-docz": "*",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "theme-ui": "0.3.5",
+    "react": "*",
+    "react-dom": "*",
+    "theme-ui": "*",
     "react-live": "*",
     "re-resizable": "*"
   }
