--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobber/docz-tools",
-  "version": "1.0.0",
+  "version": "1.0.1-pre.592+131d234",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,18 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@jobber/components": "^2.22.1",
-    "@jobber/design": "^0.9.2",
+    "@jobber/design": "^0.9.3",
     "deepmerge": "^4.2.2",
     "ts-xor": "^1.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^9.8.4",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "typed-css-modules-loader": "0.0.17"
+  },
   "peerDependencies": {
     "docz": "*",
     "gatsby-theme-docz": "*",
+    "re-resizable": "*",
     "react": "*",
     "react-dom": "*",
-    "theme-ui": "*",
     "react-live": "*",
-    "re-resizable": "*"
-  }
+    "theme-ui": "*"
+  },
+  "gitHead": "131d23436fe16b8ffffe943a895ac5fec4c2f372"
+  
 }
