build: @jobber/docz-tools package (#449)
* remove the old theme

* moves md to docs directory

* creates docz-tools package and uses it

* update the doczrc

* set up gatsby to use the new theme

* resets the theme

* adds typography

* clean up typography

* aligns content in Layout

* styles blockquote

* styles links

* style lists

* style code blocks

* makes sidebar width adjustable

* adds Sidebar component

* Adds first layer of navigation

* organize the README files

* adds the navigation

* adds the logo component

* adds search box to Sidebar

* fixes broken search

* allow sidebar to scroll

* adds Actions

* adds Actions

* adds the Props table

* use Divider for hr

* styles Playground

* styles the playground handle

* move sideBarWidth to theme

* add containerWidth to config

* use containerWidth in Layout

* adds Playground component

* add darkBlue color to body text

* add zIndex to actions

* use atlantis table for tables

* makes navigation scroll to active item

* add README to new package

* hide private components

* make build work

* make build work

* make linter happy

* gets build working

* does atlantis check before aliasing

* move null loader to root

* Check for netlify before aliasing

* move aliases to root

* add jobber alias to build

* change circle to use build

* move root styles to css

* make start work

* update routes for package mdx

* remove null md loader from docz-tools

* Adds ensure changelog headers back in

* PR feedback

* make playground work

* Move playground to css modules

* move postcss to docz-tools

* revert past commits

* makes css more readable

* compare envvar

* equals one more

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "license": "MIT",
   "scripts": {
     "prestart": "cd packages/components && npm run build:cssTypes",
-    "start": "docz dev",
-    "start:withPrivateComponents": "PRIVATE_COMPONENTS=visible docz dev",
+    "start": "USE_ATLANTIS_ALIASES=true docz dev",
+    "start:withPrivateComponents": "USE_ATLANTIS_ALIASES=true PRIVATE_COMPONENTS=visible docz dev",
     "test": "jest",
     "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
     "generate": "plop -- --path='./packages/components/src/'",
-    "build": "npm run docz:build",
-    "docz:build": "docz build",
-    "docz:serve": "docz serve",
+    "build": "USE_ATLANTIS_ALIASES=true docz build",
+    "serve": "docz serve",
     "clean": "rm -rf .docz",
     "lerna:bootstrap": "lerna bootstrap",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
@@ -24,7 +23,7 @@
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
-    "version": "node src/ensureChangelogHeaders.js"
+    "version": "node ensureChangelogHeaders.js"
   },
   "repository": {
     "type": "git",
@@ -43,6 +42,7 @@
     "@jobber/components": "file:packages/components",
     "@jobber/design": "file:packages/design",
     "@jobber/docx": "file:packages/docx",
+    "@jobber/docz-tools": "file:packages/docz-tools",
     "@jobber/eslint-config": "file:packages/eslint-config",
     "@jobber/generators": "file:packages/generators",
     "@jobber/stylelint-config": "file:packages/stylelint-config",
@@ -54,14 +54,14 @@
     "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
+    "@types/theme-ui": "^0.3.7",
     "autoprefixer": "^9.8.4",
     "css-loader": "^3.4.2",
-    "docz": "^2.3.0-alpha.13",
-    "docz-core": "^2.3.0-alpha.12",
+    "docz": "^2.3.1",
     "eslint": "^6.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jest": "^22.6.4",
-    "gatsby-theme-docz": "^2.3.0-alpha.13",
+    "gatsby-theme-docz": "^2.3.1",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
@@ -84,7 +84,6 @@
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
-    "theme-ui": "^0.3.1",
     "typed-css-modules-loader": "^0.0.17",
     "typescript": "^3.8.3"
   },
