--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,53 +26,51 @@
     "@popperjs/core": "^2.0.6",
     "@std-proposal/temporal": "0.0.1",
     "@types/color": "^3.0.1",
-    "@types/lodash": "^4.14.136",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/uuid": "^3.4.5",
-    "@use-it/event-listener": "^0.1.3",
+    "@types/lodash": "^4.14.168",
+    "@types/react-router-dom": "^5.1.7",
+    "@use-it/event-listener": "^0.1.6",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "color": "^3.1.2",
+    "color": "^3.1.3",
     "filesize": "^6.1.0",
-    "framer-motion": "^1.10.3",
-    "lodash": "^4.17.15",
-    "react-dropzone": "^11.0.2",
+    "framer-motion": "^1.11.1",
+    "lodash": "^4.17.20",
+    "react-dropzone": "^11.2.4",
     "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
-    "react-markdown": "^4.1.0",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
-    "time-input-polyfill": "^1.0.7",
-    "ts-xor": "^1.0.8",
-    "uuid": "^3.3.2"
+    "time-input-polyfill": "^1.0.9",
+    "ts-xor": "^1.0.8"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.3.0",
-    "@testing-library/user-event": "^12.0.2",
-    "@types/classnames": "^2.2.7",
-    "@types/glob": "^7.1.1",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/uuid": "^3.4.5",
-    "autoprefixer": "^9.5.1",
-    "copyfiles": "^2.1.0",
-    "glob": "^7.1.4",
-    "postcss": "^7.0.16",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/classnames": "^2.2.11",
+    "@types/glob": "^7.1.3",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-test-renderer": "^16.9.4",
+    "@types/uuid": "^3.4.9",
+    "autoprefixer": "^9.8.6",
+    "copyfiles": "^2.4.1",
+    "glob": "^7.1.6",
+    "postcss": "^7.0.35",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "react-test-renderer": "^16.9.0",
-    "rollup": "^1.11.3",
+    "react-test-renderer": "^16.14.0",
+    "rollup": "^1.32.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-multi-input": "^0.2.2",
     "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.21.0",
-    "ts-node": "^8.1.0",
+    "rollup-plugin-typescript2": "^0.21.2",
+    "ts-node": "^8.10.2",
     "typed-css-modules": "^0.3.6",
-    "typescript": "^3.8.3",
-    "uuid": "^3.3.2"
+    "typescript": "^3.9.7",
+    "uuid": "^3.4.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
