--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -2,7 +2,7 @@
   "name": "@jobber/docz-tools",
   "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
