--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "ie >= 11"
   ],
   "dependencies": {
-    "@std-proposal/temporal": "0.0.1"
+    "@std-proposal/temporal": "0.0.1",
+    "react-popper": "^2.2.5"
   }
 }
