--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -40,6 +40,7 @@
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
     "react-router-dom": "^5.2.0",
+    "react-popper": "^2.2.5",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
     "uuid": "^3.3.2"
