--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.1.4",
     "@jobber/components": "^2.34.0",
     "@jobber/design": "^0.11.1",
+    "classnames": "^2.3.1",
     "deepmerge": "^4.2.2",
+    "framer-motion": "^4.1.16",
+    "react-helmet": "^6.1.0",
     "ts-xor": "^1.0.8"
   },
   "peerDependencies": {
@@ -25,5 +28,8 @@
     "react-dom": "*",
     "react-live": "*",
     "theme-ui": "*"
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.1"
   }
 }
