--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -15,7 +15,10 @@
     "@jobber/design": "^0.12.0",
     "classnames": "^2.3.1",
     "deepmerge": "^4.2.2",
-    "framer-motion": "^4.1.16",
+    "framer-motion": "^1.11.1",
+    "postcss": "^7.0.17",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react-helmet": "^6.1.0",
     "ts-xor": "^1.0.8"
   },
