--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "typeRoots": ["./node_modules/@types"],
     "jsx": "react",
     "declaration": true,
     "rootDir": "src",
