--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@apollo/client": "^3.3.16",
     "@apollo/react-testing": "^4.0.0",
+    "@jobber/formatters": " ^0.1.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/react-hooks": "^7.0.0",
     "@types/jest": "^26.0.23",
