--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
+    "jsx": "react",
     "declaration": true,
     "rootDir": "src",
     "outDir": "dist"
