Update Autocomplete to use BaseFormfieldProps instead of FormFieldProps

--- a/packages/docz-tools/package.json
+++ b/packages/docz-tools/package.json
@@ -34,5 +34,6 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.1"
-  }
+  },
+  "gitHead": "ee3e90747b442a88ba044f0aed015b4c5582981d"
 }
