--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
     "version": "node ensureChangelogHeaders.js",
-    "convertIcoMoon": "scripts/convertIcoMoon.ts"
+    "convertIcoMoon": "scripts/convertIcoMoon.ts",
+    "preventManualRelease": "node scrips/preventManualRelease.js"
   },
   "repository": {
     "type": "git",
