make circle run the script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,18 +187,21 @@ workflows:
       - install_dependencies:
           requires:
             - checkout_code
+      - check_for_manual_release:
+          requires:
+            - install_dependencies
       - lint_javascript:
           requires:
-            - install_dependencies
+            - check_for_manual_release
       - lint_css:
           requires:
-            - install_dependencies
+            - check_for_manual_release
       - test:
           requires:
-            - install_dependencies
+            - check_for_manual_release
       - build_docs:
           requires:
-            - install_dependencies
+            - check_for_manual_release
       - release:
           filters:
             branches:
